# vc4-gpu-tools

./: .gitignore  Makefile.am  configure.ac
include/: vc4_packet.h  vc4_tools.h
include/drm/: vc4_drm.h
tests/: .gitignore  Makefile.am  shader_map.c  shader_missing_end  shader_missing_end.c  shader_noop.c
tests/lib/: vc4_qpu.c  vc4_qpu.h  vc4_test.c  vc4_test.h
tools/: Makefile.am  vc4_dump_hang_state.c  vc4_dump_parse.c  vc4_dump_parse.h  vc4_dump_parse_cl.c  vc4_dump_to_clif.c  vc4_qpu_disasm.c
